# Site-Health-Check

./: .env.example  .gitignore  MakeFile  Makefile  README.md  logger-config.json.example  main.py  pyproject.toml  sites.ini.example  ssl_check.py
.github/: pylint.yml
.github/workflows/: codeql.yml  pylint.yml
Core/: Logger.py
