[tool.poetry]
name = "sitehealthcheck"
version = "1.0.1"
description = ""
authors = ["Eugene Sedletsky <eugene.sedletsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
dnspython = "^2.6.1"
configparser = "^7.1.0"
pyopenssl = "^24.2.1"
python-dotenv = "^1.0.1"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
